--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
   <meta name="twitter:description" content="Explore 3rd semester materials and notes for Computer Science students at VIT. Free downloads available.">
   <meta name="twitter:image" content="Screenshot%202025-06-17%20015417.png">
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RT16D59X5"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9RJN7FL24H"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-6RT16D59X5');
+    gtag('config', 'G-9RJN7FL24H');
   </script>
 
     </head>
