--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
   <meta name="twitter:description" content="Explore 3rd semester materials and notes for Computer Science students at VIT. Free downloads available.">
   <meta name="twitter:image" content="Screenshot%202025-06-17%20015417.png">
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9RJN7FL24H"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-9RJN7FL24H');
-  </script>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SFYRR5T2QN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-SFYRR5T2QN');
+</script>
+        
     </head>
     <body>
          <h1><b> 3rd SEMESTER MATERIALS </b></h1>
