--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
     <p>OS Notes, syllabus,projects & PYQs</p>
   </div>
 
+ <div class="card">
+    <h3><a href="cnind.html">Computer Networks</a></h3>
+    <p>OS Notes, syllabus, & PYQs</p>
+  </div>
+
+ <div class="card">
+    <h3><a href="tocind.html">Theory of Computation</a></h3>
+    <p>OS Notes, syllabus, & PYQs</p>
+  </div>
+
   <div class="card">
     <h3><a href="flind.html">Foreign Language</a></h3>
     <p>French, Spanish & German Notes & PYQs</p>
@@ -81,6 +91,26 @@
   <div class="card">
     <h3><a href="stsind.html">Soft Skills</a></h3>
     <p>STS PYQs</p>
+  </div>
+
+
+ <div class="card">
+    <h3><a href="dsalabind.html">DSA Lab</a></h3>
+    <p>DSA Lab syllabus & manuals</p>
+  </div>
+            <div class="card">
+    <h3><a href="mpmclabind.html">MPMC Lab</a></h3>
+    <p>MPMC Lab syllabus & manuals</p>
+  </div>
+            <div class="card">
+    <h3><a href="cnlabind.html">CN Lab</a></h3>
+    <p>CN Lab syllabus & manuals</p>
+  </div>
+
+           
+            <div class="card">
+    <h3><a href="oslabind.html">OS Lab</a></h3>
+    <p>OS Lab syllabus & manuals</p>
   </div>
 
   <div class="card">
