--- a/cnmod.html
+++ b/cnmod.html
@@ -12,14 +12,14 @@
         <h2><b>Modules</b></h2>
   
     <div>
-        <a href="https://drive.google.com/drive/folders/1Ytz2d7aFVpm33BRSPX2uwo0xckVCntYQ?usp=drive_link" ><img src="cnmod1.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/1Ytz2d7aFVpm33BRSPX2uwo0xckVCntYQ?usp=drive_link" ><img src="CNMOD1.png" class="bookie"></a>
         <br>
-        <a href="https://drive.google.com/drive/folders/14n0Q0MwQbl7jTrDBD37uuGOgAHDqkAVf?usp=drive_link" ><img src="cnmod2.png" class="bookie"></a>
-        <br><a href="https://drive.google.com/drive/folders/1EscBB6oM2wUhwwaldMf2T3XAr7w9ZA0_?usp=drive_link" ><img src="cnmod3.png" class="bookie"></a>
-        <br><a href="https://drive.google.com/drive/folders/1AVo2fNTSVs7DWCzeEymtrtj5zr_I-BmO?usp=drive_link" ><img src="cnmod4.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1XKUuyaDtuwUxwVkYGb0egivYvmmnXGFm?usp=drive_link" ><img src="cnmod5.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1CzeqNnysuQ6ltuemTJP85j37BGWpAATM?usp=drive_link" ><img src="cnmod6.png" class="bookie"></a>
-       <br> <a href="https://drive.google.com/drive/folders/1qGZkV6upNnWXxAnOzPJXW0ZSGYB8zWD6?usp=drive_link" ><img src="cnmod7.png" class="bookie"></a>
+        <a href="https://drive.google.com/drive/folders/14n0Q0MwQbl7jTrDBD37uuGOgAHDqkAVf?usp=drive_link" ><img src="CNMOD2.png" class="bookie"></a>
+        <br><a href="https://drive.google.com/drive/folders/1EscBB6oM2wUhwwaldMf2T3XAr7w9ZA0_?usp=drive_link" ><img src="CNMOD3.png" class="bookie"></a>
+        <br><a href="https://drive.google.com/drive/folders/1AVo2fNTSVs7DWCzeEymtrtj5zr_I-BmO?usp=drive_link" ><img src="CNMOD4.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1XKUuyaDtuwUxwVkYGb0egivYvmmnXGFm?usp=drive_link" ><img src="CNMOD5.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1CzeqNnysuQ6ltuemTJP85j37BGWpAATM?usp=drive_link" ><img src="CNMOD6.png" class="bookie"></a>
+       <br> <a href="https://drive.google.com/drive/folders/1qGZkV6upNnWXxAnOzPJXW0ZSGYB8zWD6?usp=drive_link" ><img src="CNMOD7.png" class="bookie"></a>
     </div>
     <!-- <img src="Screenshot 2025-06-17 020246.png" class="syl"> -->
         <div class="vase">
