--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
     </head>
     <body>
-         <h1><b> 3rd SEMESTER MATERIALS </b></h1>
+         <h1><b> 3RD SEMESTER MATERIALS </b></h1>
     
   <nav>
       <ul>
