--- a/mpmclabind.html
+++ b/mpmclabind.html
@@ -15,7 +15,7 @@
        <div class="card-grid">
 
   <div class="card" style="background-color: rgb(133, 151, 204);">
-    <h3><a href="https://drive.google.com/file/d/18Bhcxd8VhzuW8ymzvBXWdvkmK8T16Vdr/view?usp=drive_link">Syllabus</a></h3>
+    <h3><a href="#">Syllabus</a></h3>
     <p>Notes</p>
   </div>
 
