--- a/index.html
+++ b/index.html
@@ -39,33 +39,33 @@
       <div class="topbar">
          <h1><b> 3RD SEMESTER MATERIALS </b></h1>
          <ul class="sublist">
-         <li class="CVLA">CVLA</li>
-         <li class="LANGUAGE">LANGUAGE</li>
-         <li class="DSA">DSA</li>
-         <li class="TOC">TOC</li
-         <li class="CN">CN</li>
-          <li class="CAO">CAO</li>
-           <li class="OS">OS</li>
-            <li class="STS">STS</li> 
-            <li class="MPMC">MPMC</li>
-            <li class="labs">
+         <li class="sub"><a href="cvlaind.html">CVLA</a></li>
+         <li class="sub"><a href="flind.html">LANGUAGE</a></li>
+         <li class="sub"><a href="dsaind.html">DSA</a></li>
+         <li class="sub"><a href="tocind.html">TOC</a></li>
+         <li class="sub"><a href="cnind.html">CN</a></li>
+          <li class="sub"><a href="caoind.html">CAO</a></li>
+           <li class="sub"><a href="osind.html">OS</a></li>
+            <li class="sub"><a href="stsind.html">STS</a></li> 
+            <li class="sub"><a href="mpmcind.html">MPMC</a></li>
+            <!-- <li class="sub"> -->
+              <li class="subl">
             <form class="labsf">
               <select >
-                <option value="JAVA">JAVA</option>
-                <option value="OS">OS</option>
-                <option value="CN">CN</option>
-                <option value="DSA">DSA</option>
-                <option value="MPMC">MPMC</option>
-              </select>
+                <option value="labzDUMMY"  class="labdd">LABS</option>
+                <option value="JAVA" class="labdd"><a href="javaind.html">JAVA</a></option>
+                <option value="OS" class="labdd"><a href="oslabind.html">OS LAB</a></option>
+                <option value="CN" class="labdd"><a href="cnlabind.html">CN LAB</a></option>
+                <option value="DSA" class="labdd"><a href="dsalabind.html">DSA LAB</a></option>
+                <option value="MPMC" class="labdd"><a href="mpmclabind.html">MPMC LAB</a></option>
+              </select></form></li>
+            
+              <li class="subl"><form class="npf"><select >
+                <option value="DUMMY" class="labdd">NPTEL</option>
+                <option value="Wildlife Ecology"  class="labdd">Wildlife Ecology</option>
+              </select></form></li>
             </form>
-          </ul>
-            <button class="NPTEL">
-            <form class="NPTELf">
-              <select >
-                <option value="Wildlife Ecology">JAVA</option>
-              </select>
-            </form>
-            </button>
+          
 
     </div>
 
