--- a/cnind.html
+++ b/cnind.html
@@ -26,6 +26,7 @@
 
     
     <body>
+        <div style="background-color=  rgb(141, 169, 204)">
          <h1><b>CN Materials </b></h1>
     
   <nav>
@@ -57,5 +58,6 @@
 </div>
 <h3>Check Books Availability in VIT Library</h3>
 <div class="cat"><a href="https://divyapriya382006.github.io/3rd-Semester/"> VIT Library Catalogue</a></div>
+        </div>
 </body>
 </html>
