--- a/cnmod.html
+++ b/cnmod.html
@@ -9,6 +9,7 @@
 
     </head>
     <body>
+        <div style="background-color=  rgb(141, 169, 204)">
         <h2><b>Modules</b></h2>
   
     <div>
@@ -26,5 +27,6 @@
             <a href="https://divyapriya382006.github.io/3rd-Semester/"> Go Back to Home!</a></div>
     <!-- <button class="butu"><a href="http://127.0.0.1:5500/Duplicate/index.html"> Go Back</a></button>  -->
 </nav>
+        </div>
 </body>
 </html>
