--- a/cnind.html
+++ b/cnind.html
@@ -26,7 +26,7 @@
 
     
     <body>
-        <div style="background-color=  rgb(141, 169, 204)">
+        <div style="background-color:  rgb(141, 169, 204);">
          <h1><b>CN Materials </b></h1>
     
   <nav>
