--- a/cnmod.html
+++ b/cnmod.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <div style="background-color=  rgb(141, 169, 204)">
+        <div style="background-color: rgb(141, 169, 204);">
         <h2><b>Modules</b></h2>
   
     <div>
