--- a/dsaind.html
+++ b/dsaind.html
@@ -23,6 +23,7 @@
 </script>
     </head>
     <body>
+         <div style="background-color: rgb(141, 169, 204);">
          <h1><b> BCSE202L                    DSA Materials </b></h1>
     
   <nav>
@@ -52,6 +53,6 @@
     </div>
     <br>
 <h3>Check Books Availability in VIT Library</h3>
-<div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
+<div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div></div>
 </body>
 </html>
