--- a/dsamod.html
+++ b/dsamod.html
@@ -19,6 +19,7 @@
 </script>
     </head>
     <body>
+         <div style="background-color: rgb(141, 169, 204);">
         <h2><b>Modules</b></h2>
   <!-- <nav>
       <ul id="modules" type="circle">
@@ -49,6 +50,6 @@
         <div class="vase">
             <a href="https://divyapriya382006.github.io/3rd-Semester/"> Go Back to Home!</a></div>
     <!-- <button class="butu"><a href="http://127.0.0.1:5500/Duplicate/index.html"> Go Back</a></button>  -->
-</nav>
+</nav></div>
 </body>
 </html>
