--- a/index.html
+++ b/index.html
@@ -39,18 +39,19 @@
       <div class="topbar">
          <h1><b> 3RD SEMESTER MATERIALS </b></h1>
          <ul class="sublist">
-         <li class="sub"><a href="cvlaind.html">CVLA</a></li>
-         <li class="sub"><a href="flind.html">LANGUAGE</a></li>
-         <li class="sub"><a href="dsaind.html">DSA</a></li>
-         <li class="sub"><a href="tocind.html">TOC</a></li>
+         <li class="sub"><a href="firstind.html">1st Semester</a></li>
+         <li class="sub"><a href="secondind.html">2nd Semester</a></li>
+         <li class="sub"><a href="thirdind.html">3rd Semester</a></li>
+            <li class="sub"><a href="fourthind.html">4th Semester</a></li>
+         <!-- <li class="sub"><a href="tocind.html">TOC</a></li>
          <li class="sub"><a href="cnind.html">CN</a></li>
           <li class="sub"><a href="caoind.html">CAO</a></li>
            <li class="sub"><a href="osind.html">OS</a></li>
             <li class="sub"><a href="stsind.html">STS</a></li> 
-            <li class="sub"><a href="mpmcind.html">MPMC</a></li>
+            <li class="sub"><a href="mpmcind.html">MPMC</a></li> -->
             <!-- <li class="sub"> -->
               <li class="subl">
-            <form class="labsf">
+            <!-- <form class="labsf">
               <select >
                 <option value="labzDUMMY"  class="labdd">LABS</option>
                 <option value="JAVA" class="labdd"><a href="javaind.html">JAVA</a></option>
@@ -64,7 +65,7 @@
                 <option value="DUMMY" class="labdd">NPTEL</option>
                 <option value="Wildlife Ecology"  class="labdd">Wildlife Ecology</option>
               </select></form></li>
-            </form>
+            </form> -->
           
 
     </div>
@@ -143,6 +144,23 @@
     <h3><a href="oslabind.html">OS Lab</a></h3>
     <p>OS Lab syllabus & manuals</p>
   </div>
+  -------------------
+  <div class="card">
+    <h3><a href="#">Enviroinmental SCiences</a></h3>
+    <p>EVS links and dates</p>
+  </div>
+  <div class="card">
+    <h3><a href="#">Wildlife Ecology</a></h3>
+    <p>Wildlife ecology notes and answer keys</p>
+  </div>
+
+  <div class="card">
+    <h3><a href="oslabind.html">OS Lab</a></h3>
+    <p>OS Lab syllabus & manuals</p>
+  </div>
+
+
+
 
   <div class="card">
     <h3><a href="mailto:divyapriya382006@gmail.com">Contact Me</a></h3>
@@ -155,4 +173,4 @@
 <a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=20953104&style=0006&nbdigits=5&type=ip&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>                                     -->
 </body>
-</html>
+       </html>
