--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <div class="topbar">
          <h1><b> 3RD SEMESTER MATERIALS </b></h1>
          <ul class="sublist">
-         <li class="sub"><a href="firstind.html">1st Semester</a></li>
-         <li class="sub"><a href="secondind.html">2nd Semester</a></li>
-         <li class="sub"><a href="thirdind.html">3rd Semester</a></li>
-            <li class="sub"><a href="fourthind.html">4th Semester</a></li>
+         <li class="sub"><a href="firstind.html">1stSemester</a></li>
+         <li class="sub"><a href="secondind.html">2ndSemester</a></li>
+         <li class="sub"><a href="thirdind.html">3rdSemester</a></li>
+            <li class="sub"><a href="fourthind.html">4thSemester</a></li>
          <!-- <li class="sub"><a href="tocind.html">TOC</a></li>
          <li class="sub"><a href="cnind.html">CN</a></li>
           <li class="sub"><a href="caoind.html">CAO</a></li>
@@ -144,7 +144,7 @@
     <h3><a href="oslabind.html">OS Lab</a></h3>
     <p>OS Lab syllabus & manuals</p>
   </div>
-  -------------------
+
   <div class="card">
     <h3><a href="#">Enviroinmental SCiences</a></h3>
     <p>EVS links and dates</p>
@@ -155,14 +155,10 @@
   </div>
 
   <div class="card">
-    <h3><a href="oslabind.html">OS Lab</a></h3>
-    <p>OS Lab syllabus & manuals</p>
+    <h3><a href="#">Others</a></h3>
+    <p>Other stuffs</p>
   </div>
-
-
-
-
-  <div class="card">
+<div class="card">
     <h3><a href="mailto:divyapriya382006@gmail.com">Contact Me</a></h3>
     <p>Reach out for collabs, suggestions or help</p>
   </div>
