--- a/cvlaind.html
+++ b/cvlaind.html
@@ -24,6 +24,7 @@
 </script>
     </head>
     <body>
+         <div style="background-color:  rgb(141, 169, 204);">
          <h1><b> BMAT201L                    CVLA Materials </b></h1>
     
   <nav>
@@ -60,5 +61,6 @@
 </div>
 <h3>Check Books Availability in VIT Library</h3>
 <div class="cat"><a href="https://divyapriya382006.github.io/3rd-Semester/"> VIT Library Catalogue</a></div>
+         </div>
 </body>
 </html>
