--- a/caoind.html
+++ b/caoind.html
@@ -23,6 +23,7 @@
 </script>
     </head>
     <body>
+         <div style="background-color:  rgb(141, 169, 204);">
          <h1><b> BCSE205L                    CAO Materials </b></h1>
     
   <nav>
@@ -52,5 +53,6 @@
 <div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
         <nav>        <div class="vase">
             <a href="https://divyapriya382006.github.io/3rd-Semester/"> Go Back to Home!</a></div></nav>
+         </div>
 </body>
 </html>
