--- a/javaind.html
+++ b/javaind.html
@@ -23,6 +23,7 @@
 </script>
     </head>
     <body>
+         <div style="background-color:  rgb(141, 169, 204);">
          <h1><b> JAVA Materials </b></h1>
     
   <nav>
@@ -57,6 +58,6 @@
 <div class="cat"><a href="https://webopaccc.vit.ac.in/"> VIT Library Catalogue</a></div>
 <h3>Check out JAVA Online Compiler!</h3>
 <div class="cat"><a href="https://www.programiz.com/java-programming/online-compiler/">JAVA Online Compiler </a></div>
-
+         </div>
 </body>
 </html>
