--- a/firstind.html
+++ b/firstind.html
@@ -77,46 +77,46 @@
 
   <div class="card">
     <h3><a href="pythonind.html">Python</a></h3>
-    <p>COA Notes, syllabus & PYQs</p>
+    <p>Python Notes, syllabus & PYQs</p>
   </div>
 
   <div class="card">
-    <h3><a href="calcind.html">Calculus</a></h3>
-    <p>CVLA Notes, syllabus & PYQs</p>
+    <h3><a href="https://drive.google.com/drive/folders/1wNeAUxPjytyO9NgOJJB0uCvU-RXondDt?usp=drive_link">Calculus</a></h3>
+    <p>Calculus Notes, syllabus & PYQs</p>
   </div>
 
   <div class="card">
-    <h3><a href="calclabind.html">Calculus Lab</a></h3>
-    <p>DSA PDFs, code, notes, syllabus & PYQs</p>
+    <h3><a href="https://drive.google.com/drive/folders/15HPkLltk9TPLQ9v5Iueug9JZfOFy8b73?usp=drive_link">Calculus Lab</a></h3>
+    <p></p>Calculus Lab PDFs, code, notes, syllabus & PYQs</p>
   </div>
 
   <div class="card">
-    <h3><a href="phyind.html">Physics</a></h3>
-    <p>OOP concepts, programs, and syllabus</p>
+    <h3><a href="https://drive.google.com/drive/folders/154JERWxEYZw42CUIenSQWACtCG8Kb9kN?usp=drive_link">Physics</a></h3>
+    <p>Physics concepts, programs, and syllabus</p>
   </div>
 
   <div class="card">
-    <h3><a href="phylabind.html">Physics Lab</a></h3>
-    <p>MPMC Notes, syllabus & PYQs</p>
+    <h3><a href="https://drive.google.com/drive/folders/1mQa8vu7QDtlSoazonSJ840NGRcBmS-qO?usp=drive_link">Physics Lab</a></h3>
+    <p>Physics Lab Notes, syllabus & PYQs</p>
   </div>
 
   <div class="card">
-    <h3><a href="englishfiind.html">English</a></h3>
-    <p>OS Notes, syllabus,projects & PYQs</p>
+    <h3><a href="https://drive.google.com/drive/folders/19jXDKiohh-D-ru0VhqQR3lQ4Z7uNXUDH?usp=drive_link">English</a></h3>
+    <p>English Notes, syllabus,projects & PYQs</p>
   </div>
 
  <div class="card">
-    <h3><a href="eeeind.html">EEE</a></h3>
-    <p>OS Notes, syllabus, & PYQs</p>
+    <h3><a href="https://drive.google.com/drive/folders/1WSSYP68koJ2OK5BFztC6QG-ZJtHmPdAL?usp=drive_link">EEE</a></h3>
+    <p>EEE Notes, syllabus, & PYQs</p>
   </div>
 
  <div class="card">
-    <h3><a href="eeelabind.html">EEE Lab</a></h3>
-    <p>OS Notes, syllabus, & PYQs</p>
+    <h3><a href="https://drive.google.com/drive/folders/1rY6wxCMLN4KKjnPrO1nMCxigH0CsxRpi?usp=drive_link">EEE Lab</a></h3>
+    <p>EEE Lab Notes, syllabus, & PYQs</p>
   </div>
 
   <div class="card">
-    <h3><a href="stsfiind.html">Soft Skills</a></h3>
+    <h3><a href="https://drive.google.com/drive/folders/1eoVnltap-mNjNg8CXQwKaFfh-nCmFfBL?usp=drive_link">Soft Skills</a></h3>
     <p>STS PYQs</p>
   </div>
 
