--- a/flind.html
+++ b/flind.html
@@ -38,6 +38,12 @@
     <p>PYQs</p>
   </div>
 
+
+  <div class="card" style="background-color: rgb(133, 151, 204);">
+    <h3><a href="https://drive.google.com/drive/folders/1vUcI7AS6TCN1NP5CD3WldxCkjjMJ7K8j?usp=sharing">French</a></h3>
+    <p>MY NOTES FROM SRIVIDYA MAM</p>
+  </div>
+
 </nav>
 
 <br>
